--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <ul>
             <li><a href="./recipes/spaghetti.html">Spaghetti</a></li>
             <li><a href="./recipes/tacos.html">Tacos</a></li>
-            <li><a href="./recipes/tacos.html">Ceviche</a></li>
+            <li><a href="./recipes/ceviche.html">Ceviche</a></li>
         </ul>
     </head>
 </html>
